# audiolingo

./: .gitignore  Cargo.toml  convert_whisper_to_onnx.py  gradle-9.4.0-rc-2-wrapper.jar - Copie.asc  page.html
.cargo/: config.toml
ai/: brain.py  moderation.py  viral_engine.py
audio_lingo/: Cargo.toml
audio_lingo/src/: gui.rs  main.rs  pipeline.rs
audio_lingo/src/audio/: buffer.rs  io.rs  lang.rs  mod.rs  output.rs  stt.rs  system_capture.rs  tts.rs
audio_lingo/src/modules/: stt.rs  translator.rs
audio_lingo/src/ui/: app.rs
audiolingo/: Cargo.toml
audiolingo_android/: build.gradle  settings.gradle
audiolingo_core/: CMakeLists.txt  Cargo.toml  build.rs  core.cpp  core.h  mod.rs
audiolingo_tv/: Cargo.toml
audiolingo_windows/: Cargo.toml  micro_speaker_loop.rs
automation/: uploader.py  video_generator.py
backend/: app.py  cinetpay.py  database.py  gpu_client.py  init_db.py  main.py  model_loader.py  (+9 more)
core/: Cargo.toml
core/src/: audio_processor.rs  error.rs  lib.rs  pipeline.rs  types.rs
core/src/modules/: mod.rs  stt.rs  translator.rs  tts.rs
voice_assistant/: Cargo.toml
voice_assistant/src/: commands.rs  context.rs  lang.rs  lang_detect.rs  main.rs  pipeline.rs  pipeline_async.rs  response.rs  router.rs
voice_assistant/src/audio/: buffer.rs  io.rs  noise_reduction.rs  queue.rs  system_capture.rs  vad.rs
voice_assistant/src/conference/: mod.rs  participant.rs  session.rs
voice_assistant/src/speech/: recognizer.rs  stt.rs  synthesizer.rs  tts.rs
voice_assistant/src/translation/: translator.rs
voice_assistant/src/ui/: app.rs
(+330 files in other folders)
